--- a/CopyDataUtil/CopyDataUtil.DataAccess/packages.config
+++ b/CopyDataUtil/CopyDataUtil.DataAccess/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Dapper" version="1.50.5" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net462" />
+  <package id="NLog" version="4.5.9" targetFramework="net462" />
 </packages>
