--- a/DevStartPage/DevStartPage.Web/package.json
+++ b/DevStartPage/DevStartPage.Web/package.json
@@ -1,10 +1,10 @@
 {
   "version": "1.0.0",
-  "name": "paspricing",
+  "name": "devstartpage",
   "private": true,
-	"scripts": {
-		"postinstall": "gulp default"
-	},
+  "scripts": {
+    "postinstall": "gulp default"
+  },
   "dependencies": {
     "@angular/animations": "^4.1.2",
     "@angular/common": "~4.0.3",
@@ -15,7 +15,6 @@
     "@angular/platform-browser": "~4.0.3",
     "@angular/platform-browser-dynamic": "~4.0.3",
     "@angular/router": "~4.0.3",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.18",
     "@swimlane/ngx-datatable": "^9.1.0",
     "@swimlane/ngx-dnd": "^2.0.2",
     "@types/lodash": "^4.14.52",
