Updates and adding Unit Tests

--- a/CopyDataUtil/CopyDataUtil.Core/Mappings/SourceDestinationColumnMappings.json
+++ b/CopyDataUtil/CopyDataUtil.Core/Mappings/SourceDestinationColumnMappings.json
@@ -1,83 +1,1 @@
-{
-	"Configurations": [
-		{
-			"SourceTable": "CPPACKAGEDTLS",
-			"DestinationTable": "CpPackageDtls",
-			"StagingTable": null,
-			"SourceDestinationColumnMapping": [
-				{
-					"SourceColumn": "SYSKEY",
-					"DestinationColumn": "Syskey"
-				},
-				{
-					"SourceColumn": "CPPACKAGEDEF",
-					"DestinationColumn": "CpPackageDef"
-				},
-				{
-					"SourceColumn": "CDMCODE",
-					"DestinationColumn": "CdmCode"
-				},
-				{
-					"SourceColumn": "REVCODE",
-					"DestinationColumn": "RevCode"
-				},
-				{
-					"SourceColumn": "HCPCSRATES",
-					"DestinationColumn": "HcpcsRates"
-				},
-				{
-					"SourceColumn": "TOTUNITS",
-					"DestinationColumn": "TotUnits"
-				},
-				{
-					"SourceColumn": "AVGUNITS",
-					"DestinationColumn": "AvgUnits"
-				},
-				{
-					"SourceColumn": "PERCENTAGE",
-					"DestinationColumn": "Percentage"
-				},
-				{
-					"SourceColumn": "TOTALCHARGES",
-					"DestinationColumn": "TotalCharges"
-				},
-				{
-					"SourceColumn": "STATUNITCHARGE",
-					"DestinationColumn": "StatUnitCharge"
-				},
-				{
-					"SourceColumn": "CDMUNITCHARGE",
-					"DestinationColumn": "CdmUnitCharge"
-				},
-				{
-					"SourceColumn": "CDATE",
-					"DestinationColumn": "Cdate"
-				},
-				{
-					"SourceColumn": "CTIME",
-					"DestinationColumn": "Ctime"
-				},
-				{
-					"SourceColumn": "CUSER",
-					"DestinationColumn": "Cuser"
-				},
-				{
-					"SourceColumn": "MDATE",
-					"DestinationColumn": "Mdate"
-				},
-				{
-					"SourceColumn": "MTIME",
-					"DestinationColumn": "Mtime"
-				},
-				{
-					"SourceColumn": "MUSER",
-					"DestinationColumn": "Muser"
-				},
-				{
-					"SourceColumn": "DOMDEF",
-					"DestinationColumn": "Domdef"
-				}
-			]
-		}
-	]
-}
+{"Configurations":[{"SourceTable":"DtCdmDet","DestinationTable":"DtCdmDet","StagingTable":null,"SourceDestinationColumnMapping":[{"SourceColumn":"SYSKEY","DestinationColumn":"SYSKEY"},{"SourceColumn":"DTCDM","DestinationColumn":"DTCDM"},{"SourceColumn":"CHARGECODE","DestinationColumn":"CHARGECODE"},{"SourceColumn":"CDMDESC","DestinationColumn":"CDMDESC"},{"SourceColumn":"ITEMCHARGE","DestinationColumn":"ITEMCHARGE"},{"SourceColumn":"ITEMCOST","DestinationColumn":"ITEMCOST"},{"SourceColumn":"REVCODE","DestinationColumn":"REVCODE"},{"SourceColumn":"THPCODE","DestinationColumn":"THPCODE"},{"SourceColumn":"CPT4","DestinationColumn":"CPT4"},{"SourceColumn":"CPT4MOD","DestinationColumn":"CPT4MOD"},{"SourceColumn":"MDATE","DestinationColumn":"MDATE"},{"SourceColumn":"MTIME","DestinationColumn":"MTIME"},{"SourceColumn":"MUSER","DestinationColumn":"MUSER"},{"SourceColumn":"DOMDEF","DestinationColumn":"DOMDEF"},{"SourceColumn":"EFF_DATE","DestinationColumn":"EFF_DATE"},{"SourceColumn":"TRM_DATE","DestinationColumn":"TRM_DATE"},{"SourceColumn":"VARDIRCOST","DestinationColumn":"VARDIRCOST"},{"SourceColumn":"VARINDCOST","DestinationColumn":"VARINDCOST"},{"SourceColumn":"FIXDIRCOST","DestinationColumn":"FIXDIRCOST"},{"SourceColumn":"FIXINDCOST","DestinationColumn":"FIXINDCOST"},{"SourceColumn":"HOSPDEPT","DestinationColumn":"HOSPDEPT"},{"SourceColumn":"MCRCSTCTR","DestinationColumn":"MCRCSTCTR"},{"SourceColumn":"FACILITY","DestinationColumn":"FACILITY"},{"SourceColumn":"SOURCE","DestinationColumn":"SOURCE"}]}]}
