--- a/Testing/FizzBuzzGame/FizzBuzzGame.csproj
+++ b/Testing/FizzBuzzGame/FizzBuzzGame.csproj
@@ -4,13 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C65D2EF4-3256-46B9-8C98-7D6F70B684FE}</ProjectGuid>
+    <ProjectGuid>{2FA76EE2-C927-4749-B203-EF4070464FC0}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Common.Formaters</RootNamespace>
-    <AssemblyName>Common.Formaters</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <RootNamespace>FizzBuzzGame</RootNamespace>
+    <AssemblyName>FizzBuzzGame</AssemblyName>
+    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -32,13 +33,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\GenericService\bin\Debug\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -47,13 +43,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Convertors\Base36Convertors.cs" />
-    <Compile Include="Convertors\Base64Convertors.cs" />
-    <Compile Include="Convertors\ConcreteTypeConverter.cs" />
-    <Compile Include="Convertors\ParsingConvertors.cs" />
-    <Compile Include="DatabaseStringFormatter.cs" />
-    <Compile Include="DateFormatter.cs" />
-    <Compile Include="FormatManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
