--- a/Testing/WebCallsExample/WebCallsExample.csproj
+++ b/Testing/WebCallsExample/WebCallsExample.csproj
@@ -52,6 +52,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Net.Http.WebRequest" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -64,6 +65,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServerResponse.cs" />
+    <Compile Include="SoapRequestExample.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
