Updating Testing Projects

--- a/MtPubSubExample/TestSubscriber/TestSubscriber.csproj
+++ b/MtPubSubExample/TestSubscriber/TestSubscriber.csproj
@@ -64,7 +64,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SomethingHappenedConsumer.cs" />
+    <Compile Include="PriorityConsumer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
