--- a/Testing/UnitTestsExample/UnitTestsExample.csproj
+++ b/Testing/UnitTestsExample/UnitTestsExample.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ManagerTests.cs" />
+    <Compile Include="MoqUnitTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestingManager.cs" />
   </ItemGroup>
