--- a/Tools/Tools.Common/Tools.Common.csproj
+++ b/Tools/Tools.Common/Tools.Common.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Converters\ConcreteTypeConverter.cs" />
     <Compile Include="Converters\DataTableConverter.cs" />
     <Compile Include="Converters\ParsingConverters.cs" />
+    <Compile Include="FileHelper.cs" />
     <Compile Include="Formatters\DatabaseStringFormatter.cs" />
     <Compile Include="Formatters\DateFormatter.cs" />
     <Compile Include="Formatters\FormatManager.cs" />
