--- a/Tools/Tools.TimeCardAutomation/packages.config
+++ b/Tools/Tools.TimeCardAutomation/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Polly" version="7.1.0" targetFramework="net462" />
   <package id="Selenium.InternetExplorer.WebDriver" version="3.141.5" targetFramework="net462" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net462" />
 </packages>
