Refactoring Send Email Methods

--- a/Tools/Tools.SendingEmail/Tools.SendingEmail.csproj
+++ b/Tools/Tools.SendingEmail/Tools.SendingEmail.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -43,11 +46,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LoggingTableStats.cs" />
     <Compile Include="LogReader.cs" />
+    <Compile Include="Models\CopyDetails.cs" />
+    <Compile Include="Models\LogStats.cs" />
+    <Compile Include="Models\LogStatsDetails.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SendEmail.cs" />
+    <Compile Include="SendingEmailManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
