--- a/Tools/Tools.SendingEmail/Tools.SendingEmail.csproj
+++ b/Tools/Tools.SendingEmail/Tools.SendingEmail.csproj
@@ -47,9 +47,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="LogReader.cs" />
-    <Compile Include="Models\CopyDetails.cs" />
-    <Compile Include="Models\LogStats.cs" />
-    <Compile Include="Models\LogStatsDetails.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SendEmail.cs" />
@@ -58,6 +55,16 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Tools.Core\Tools.Core.csproj">
+      <Project>{B81D74D3-8FCB-4EBE-979E-8DB88342480D}</Project>
+      <Name>Tools.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Tools.DataAccess\Tools.DataAccess.csproj">
+      <Project>{5F02A019-A22F-4B2F-9055-6659A6E8B598}</Project>
+      <Name>Tools.DataAccess</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
