--- a/Testing/Common.Formatters/Common.Formatters.csproj
+++ b/Testing/Common.Formatters/Common.Formatters.csproj
@@ -56,6 +56,8 @@
     <Compile Include="DatabaseStringFormatter.cs" />
     <Compile Include="DateFormatter.cs" />
     <Compile Include="FormatManager.cs" />
+    <Compile Include="JsonFormatter.cs" />
+    <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
