--- a/DevStartPage/DevStartPage.Web.AngularCli/DevStartPage.Web.AngularCli.csproj
+++ b/DevStartPage/DevStartPage.Web.AngularCli/DevStartPage.Web.AngularCli.csproj
@@ -488,6 +488,7 @@
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <None Include="packages.config" />
+    <Content Include="src\app\Downloads\Files\NotePad++.zip" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DevStartPage.Core\DevStartPage.Core.csproj">
