Updating Testing and CoServ URL

--- a/LoadSimulator/LoadSimulator/App.config
+++ b/LoadSimulator/LoadSimulator/App.config
@@ -4,11 +4,12 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
     </startup>
 	<appSettings>
-		<!--<add key="MedAssets.ResourceUrl" value="https://platwebdev.nthrive.com/platform.Stable3/" />-->
-		<add key="MedAssets.ResourceUrl" value="https://platwebrc.nthrive.com/platform.Rc/" />
+		<add key="MedAssets.ResourceUrl" value="https://platwebdev.nthrive.com/platform.Stable3/" />
+		<!--<add key="MedAssets.ResourceUrl" value="https://platwebrc.nthrive.com/platform.Rc/" />-->
 
+		<!--<add key="BusSettings.IncomingUri" value="rabbitmq://localhost" />-->
+		<add key="BusSettings.IncomingUri" value="rabbitmq://iv-rmq-pas.nthrive.com/PAS" />
 		<!--<add key="BusSettings.IncomingUri" value="rabbitmq://rc-rmq2-pas.nthrive.com/PAS" />-->
-		<add key="BusSettings.IncomingUri" value="rabbitmq://localhost" />
 		<add key="BusSettings.IncomingQueue" value="Worklist_Sync" />
 		<add key="BusSettings.OutgoingQueue" value="Worklist_Sync_All" />
 		<add key="BusSettings.Username" value="PAS" />
