--- a/Testing/DotNetFrameworkChecker/DotNetFrameworkChecker.csproj
+++ b/Testing/DotNetFrameworkChecker/DotNetFrameworkChecker.csproj
@@ -47,6 +47,7 @@
     <Compile Include="DotNetManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RegistryManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
