--- a/Testing/FirewallConnectionChecker/FirewallConnectionChecker.csproj
+++ b/Testing/FirewallConnectionChecker/FirewallConnectionChecker.csproj
@@ -8,7 +8,7 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>FirewallConnectionChecker</RootNamespace>
     <AssemblyName>FirewallConnectionChecker</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConnectionCheckerManager.cs" />
+    <Compile Include="DbConnectionManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebsiteDetails.cs" />
@@ -53,20 +54,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Prod247WebSiteList.txt" />
+    <Content Include="DbList.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="ProdAllWebsitesList.txt" />
-    <Content Include="ProdAmsWebSiteList.txt" />
-    <Content Include="ProdCfteSiteList.txt" />
-    <Content Include="ProdPfeSiteList.txt" />
-    <Content Include="ProdReverseProxyWebSiteList.txt" />
-    <Content Include="QaPasSiteList.txt" />
-    <Content Include="Rc247SiteList.txt" />
-    <Content Include="RcWeb1-2SiteList.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="RcWeb3-4SiteList.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
     <Content Include="SiteList.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
