Updating Framwork and Misc Changes

--- a/Testing/DataAccessTesting/App.config
+++ b/Testing/DataAccessTesting/App.config
@@ -1,10 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
     </startup>
 	<connectionStrings>
-		<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-PAS.Pricing.WebApi-20170502013339.mdf;Initial Catalog=aspnet-PAS.Pricing.WebApi-20170502013339;Integrated Security=True" providerName="System.Data.SqlClient" />
-		<add name="AppDB" connectionString="Data Source=RCM41VSPASDB02.medassets.com;Initial catalog=Pricing;Integrated Security=True;" providerName="System.Data.SqlClient" />
+		<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-PAS.Pricing.WebApi-20170502013339.mdf;Initial Catalog=aspnet-PAS.Pricing.WebApi-20170502013339;Integrated Security=True" providerName="System.Data.SqlClient"/>
+		<add name="AppDB" connectionString="Data Source=RCM41VSPASDB02.medassets.com;Initial catalog=Pricing;Integrated Security=True;" providerName="System.Data.SqlClient"/>
 	</connectionStrings>
 </configuration>
