--- a/Testing/ReverseProxy/Web.config
+++ b/Testing/ReverseProxy/Web.config
@@ -8,10 +8,18 @@
     <!-- Remote Web Site Address (ex. http://192.168.1.90:81 -->
     <add key="RemoteWebSite" value="http://192.168.1.90:81"/>
   </appSettings>
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.8" />
+      </system.Web>
+  -->
   <system.web>
     <httpHandlers>
       <add verb="*" path="*" type="ReverseProxy.ReverseProxy, ReverseProxy"/>
     </httpHandlers>
-    <compilation debug="true"/>
+    <compilation debug="true" targetFramework="4.8"/>
   </system.web>
 </configuration>
